--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,15 @@
     <h1>BFHL API Project</h1>
     <p class="subtext">A full-stack submission for Chitkara University's Hiring Challenge.</p>
 
+    <div class="intro">
+      <h2 class="section-title">Test the API</h2>
+      <p class="description">
+        Enter comma-separated values in the field below and click "Submit" to test the BFHL backend API. 
+        Your data will be analyzed and categorized into even numbers, odd numbers, alphabets, special characters, and more.
+      </p>
+    </div>
+
     <div class="card">
-      <h2>Test the API</h2>
       <label for="arrayInput">Enter comma-separated values:</label>
       <input type="text" id="arrayInput" placeholder="e.g. a, 1, 334, $, Doe">
       <button onclick="submitData()">Submit</button>
@@ -28,5 +35,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
